sonarlintをjavaで使用するように変更 sonarlintに指摘された箇所の修正